--- a/sparta/index.html
+++ b/sparta/index.html
@@ -26,7 +26,7 @@
         }
 
         .global-nav-logo {
-            background-image: url(file:///home/vladimir/github/chebakovvladimir.github.io/logow.png);
+            background-image: url(logow.png);
             background-repeat: no-repeat;
             background-position: 50%;
             display: inline-block;
@@ -123,6 +123,7 @@
             top: 0;
             width: 100%;
             z-index: -2;
+            height: auto;
         }
 
         .header-banner__title {
@@ -152,8 +153,9 @@
             .global-nav-locale {
                 width: 110px;
             }
-            .header-banner video {
+            .header-banner__cover {
                 transform: scale(2);
+                height: 100%;
             }
             header {
                 border-bottom: 1px solid;
