--- a/sparta/index.html
+++ b/sparta/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
+    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <title>
         Благотворительный проект проекта "Спарта"
     </title>
