--- a/sparta/index.html
+++ b/sparta/index.html
@@ -135,6 +135,270 @@
             z-index: 1;
         }
 
+        .featured-article__image {
+            background-image: url(we.jpg);
+            background-position: center;
+            background-size: cover;
+            border-radius: 50%;
+            display: inline-block;
+            margin: 4% 1.5% 5% 0;
+            padding-top: 25.39%;
+            position: relative;
+            transition: all .3s;
+            vertical-align: middle;
+            width: 25.39%;
+        }
+
+        .featured-article {
+            margin: 0 auto;
+            min-width: 320px;
+            width: 1024px;
+            text-align: center;
+        }
+
+        .featured-article__text {
+            display: inline-block;
+            max-width: 82%;
+            text-align: left;
+            vertical-align: middle;
+        }
+
+        .featured-article__image:hover {
+            opacity: .8;
+        }
+
+        h4 {
+            font-size: 2em;
+            color: #222;
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+        }
+
+        .link-text {
+            color: #333;
+            font-size: .88889em;
+            line-height: 1.3;
+        }
+
+        .mission {
+            margin: 0 auto;
+            min-width: 320px;
+            width: 1024px;
+            margin-bottom: 65px;
+        }
+
+        .mission h6 {
+            text-align: center;
+            letter-spacing: 0.1em;
+            font-weight: 400;
+        }
+
+        h6 {
+            font-size: 1em;
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+        }
+
+        .divider {
+            line-height: 1;
+        }
+
+        .divider--mission {
+    width: 100%;
+}
+
+        .divider--heading {
+            margin: 10px auto 3%;
+            width: 50%;
+        }
+
+        .divider--heading span {
+            border-color: #b7b7b7;
+        }
+
+        .divider__line {
+            border-top: 1px solid #70b6bc;
+            display: inline-block;
+            vertical-align: top;
+            width: calc(50% - 15px);
+        }
+
+        .divider__line {
+            border-top: 1px solid #70b6bc;
+            display: inline-block;
+            vertical-align: top;
+            width: calc(50% - 15px);
+        }
+
+        .divider__line--left {
+    border-top: 1px solid #70b6bc;
+    display: inline-block;
+    vertical-align: top;
+    width: calc(17% - 15px);
+        border-color: #eb9700;
+}
+
+.divider__arrow {
+    border: 1px solid #70b6bc;
+    display: inline-block;
+    height: 15px;
+    margin: -7px 2px 0;
+    -webkit-transform: rotate(138deg) skewX(20deg) skewY(20deg);
+    -ms-transform: rotate(138deg) skewX(20deg) skewY(20deg);
+    transform: rotate(138deg) skewX(20deg) skewY(20deg);
+    vertical-align: top;
+    width: 15px;
+    border-bottom: 0;
+    border-left: 0;
+}
+
+.divider__arrow--up {
+    border-right: 0;
+    border-top: 0;
+    border-color: #eb9700;
+}
+
+.divider__line--right {
+    border-top: 1px solid #70b6bc;
+    display: inline-block;
+    vertical-align: top;
+    width: calc(83% - 15px);
+    border-color: #eb9700;
+}
+
+        .circle--background {
+            background-color: #eb9700;
+            border-radius: 50%;
+            left: 0;
+            opacity: .1;
+            padding-top: 100%;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: -1;
+        }
+        .mission-content {
+    zoom: 1;
+    margin-bottom: 6.5%;
+    overflow: hidden;
+    padding: 4% 0;
+    position: relative;
+}
+
+.mission-content__person {
+    float: right;
+    max-width: 49%;
+    position: relative;
+    z-index: 2;
+}
+
+.mission-content__title--animation {
+    margin-bottom: 0;
+    min-height: 130px;
+    position: relative;
+}
+.mission-content__title-holder {
+    opacity: 1;
+position: absolute;
+    width: 100%;
+}
+
+.mission-content h2.invert {
+    font-family: "ff-din-web";
+    font-weight: 600;
+    line-height: 1.1;
+    margin-bottom: 1.6%;
+}
+
+.mission-content h2 {
+    line-height: .88;
+    margin-bottom: -.5%;
+    padding-top: 4%;
+}
+.mission-content h4.invert {
+    font-family: "DINBlack";
+    font-weight: 400;
+    line-height: .88;
+    padding-bottom: .3%;
+    border-color: #eb9700;
+}
+
+.mission-content__image {
+    display: block;
+    float: left;
+    left: 27.5%;
+    margin-left: -27.5%;
+    padding-left: 8.5%;
+    position: relative;
+    width: 75%;
+}
+.mission-content__description {
+    clear: left;
+    float: left;
+    left: 12.5%;
+    margin-left: -12.5%;
+    padding-left: 8.5%;
+    padding-top: 3.2%;
+    position: relative;
+    width: 58%;
+}
+.mission-content__navigation.has-person {
+    margin-top: 4%;
+    clear: right;
+float: right;
+padding-right: 6.5%;
+position: relative;
+width: 35%;
+z-index: 1;
+}
+
+.mission-content__description h3 {
+    margin-bottom: 3%;
+}
+
+h3 {
+    font-size: 2.66667em;
+}
+
+ul {
+        list-style: none;
+}
+
+.mission-content__description strong {
+    color: #eb9700;
+    display: block;
+    font-weight: 700;
+    line-height: 1.4;
+    margin: -1% 0 1.6%;
+    text-transform: uppercase;
+}
+
+.mission-content__description p {
+    font-family: "minion-pro";
+    font-size: .88889em;
+    line-height: 1.5;
+}
+
+.mission-content__navigation strong {
+    background-color: #eb9700;
+    color: #fff;
+    display: block;
+    font-size: .77778em;
+    font-weight: 700;
+    line-height: 1;
+    padding: 5% 8%;
+    text-transform: uppercase;
+}
+
+.mission-content__navigation .mission-content__navigation-links {
+    padding: 7%;
+}
+
+.mission-content__navigation li {
+    margin-bottom: 12px;
+}
+
+
         @media screen and (max-width: 480px) {
             .header-banner__title h1 {
                 font-size: 2.53333em;
@@ -160,6 +424,29 @@
             header {
                 border-bottom: 1px solid;
             }
+            .featured-article__image {
+                padding-top: 45%;
+                width: 45%;
+                margin: -7% auto 2%;
+            }
+            .featured-article {
+                width: 100%;
+                padding-top: 0;
+            }
+            .featured-article__text {
+                display: block;
+                margin-bottom: 10%;
+                max-width: 100%;
+                text-align: center;
+            }
+            .mission {
+                margin-bottom: 6.5%;
+                padding: 0;
+                width: 100%;
+            }
+            .divider--heading {
+                width: 95%;
+            }
         }
     </style>
 </head>
@@ -184,7 +471,85 @@
                 <h1>Все жизни<br>имеют одинаковое значение</h1>
                 <h5>мы работаем над тем чтобы у всех были одинаковые условия для развития</h5>
             </div>
-            <video class="header-banner__cover" autoplay="" muted loop="" poster="/~/media/GFO/Home/banner-1.png"><source type="video/mp4" src="https://www.gatesfoundation.org/~/media/GFO/Home/GFHPHeroVideo720p.mp4"></video></header>
+            <video class="header-banner__cover" autoplay="" muted loop="" poster="/~/media/GFO/Home/banner-1.png"><source type="video/mp4" src="https://www.gatesfoundation.org/~/media/GFO/Home/GFHPHeroVideo720p.mp4"></video>
+        </header>
+
+        <section class="featured-article featured-article--animation">
+            <div class="featured-article__image"></div>
+            <div class="featured-article__text">
+                <h4>Привет, это наша команда</h4>
+                <div class="link-text">
+                    Что-то важное и интересное
+                </div>
+            </div>
+        </section>
+
+        <section class="mission">
+            <h6>НАШИ МИССИИ ДЛЯ ДОСТИЖЕНИЯ НАШИХ ЦЕЛЕЙ</h6>
+            <div class="divider divider--heading">
+                <span class="divider__line"></span>
+                <span class="divider__arrow divider__arrow--down"></span>
+                <span class="divider__line"></span>
+            </div>
+            <!-- <article class="mission-content">
+                <div class="circle--background"></div>
+                <img src="https://www.gatesfoundation.org/~/media/GFO/Home/article1person.png?h=798&la=en&w=449" class="mission-content__person mission-content__person--animation" alt="Ensuring more young people survive and thrive">
+
+                <div class="mission-content__title--animation">
+                    <div class="mission-content__title-holder js-mission-content__title-holder is-shown">
+                        <h2 class="invert">
+                    Ensure more children <br>
+and young people<br>
+
+                </h2>
+                        <h4 class="invert">
+                    Survive&nbsp;And<br>
+Thrive
+                </h4>
+                    </div>
+                </div>
+                <img src="https://www.gatesfoundation.org/~/media/GFO/Home/article1.jpg?h=380&la=en&w=676" class="mission-content__image mission-content__image--animation" alt="Ensuring more young people survive and thrive" />
+                <div class="mission-content__description mission-content__description--animation">
+                    <h3>
+                we believe
+            </h3>
+                    <div class="divider divider--mission">
+                        <span class="divider__line--left"></span>
+                        <span class="divider__arrow divider__arrow--up"></span>
+                        <span class="divider__line--right"></span>
+                    </div>
+                    <strong style="color:#eb9700;">
+                the path out of poverty begins when the next generation can access quality healthcare and a great education.
+            </strong>
+                    <p>
+                        In developing countries, we focus on improving people’s health and wellbeing, helping individuals lift themselves out of hunger and extreme poverty. In the United States, we seek to ensure that all people—especially those with the fewest resources—can
+                        access the opportunities they need to succeed in school and life.
+                    </p>
+                </div>
+                <div class="mission-content__navigation has-person">
+                    <strong>
+                A closer Look
+            </strong>
+
+                    <ul class="mission-content__navigation-links">
+                        <li>
+                            <a class="link-text omni-link-tracker" title="Enhance education through innovation" href="#">Enhance education through innovation
+</a>
+                        </li>
+                        <li>
+                            <a class="link-text omni-link-tracker" title="Improve nutrition to reduce child deaths" href="#">Improve nutrition to reduce child deaths</a>
+                        </li>
+                        <li>
+                            <a class="link-text omni-link-tracker" href="#" target="_blank">Invest in healthy mothers and babies</a>
+                        </li>
+                        <li>
+                            <a class="link-text omni-link-tracker" href="#" target="_blank">Tackle poverty in WA state</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </article> -->
+        </section>
     </div>
 </body>
 
