--- a/sparta/index.html
+++ b/sparta/index.html
@@ -311,7 +311,7 @@
             font-weight: 600;
             font-size: 2em;
             line-height: 1.1;
-            margin: 15px;
+            margin: 15px 0;
             text-transform: uppercase;
         }
 
