--- a/sparta/index.html
+++ b/sparta/index.html
@@ -580,6 +580,9 @@
             .circle--background {
                 display: none;
             }
+            input, button {
+                width: 100%;
+            }
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
