--- a/sparta/index.html
+++ b/sparta/index.html
@@ -784,7 +784,7 @@
                             <span class="link-text">Или написать ему в телеграм <a href="tg://resolve?domain=SGora12">@Сергей</a></span>
                         </li>
                         <li>
-                            <span class="link-text">Еще нам можно написать письмо <a href="mailto:blago.sparta@gmail.com">blago.sparta@gmail.com</a></span>
+                            <span class="link-text">Еще нам можно написать на почту <a href="mailto:blago.sparta@gmail.com">blago.sparta@gmail.com</a></span>
                         </li>
                     </ul>
                 </div>
