--- a/sparta/index.html
+++ b/sparta/index.html
@@ -584,11 +584,11 @@
 <body>
     <div class="mainContainer">
         <nav>
-            <button class="global-nav-drawer-button" title="Expand navigation">≡</button>
+            <button class="global-nav-drawer-button" title="Expand navigation" style="display:none;">≡</button>
 
             <a href="/" class="global-nav-logo" title="Благотворительный проект проекта Спарта"><span class="global-nav-logo-text">БЛАГОТВОРИТЕЛЬНОСТЬ</span></a>
 
-            <select class="global-nav-locale">
+            <select class="global-nav-locale" style="display:none;">
                 <option class="global-nav-locale" selected="" disabled="">Язык</option>
                 <option class="global-nav-locale" value="/en/" title="en">English</option>
                 <option class="global-nav-locale" value="/ru/" title="ru">Русский</option>
@@ -741,7 +741,7 @@
                             <span class="link-text">Перечислить деньги на наш проект.</span>
                         </li>
                     </ul>
-                    <div>
+                    <div style="display:none;">
                         <div style="display:flex;">
                             <input placeholder="Введите сумму" value="">
                         </div>
